# rtype

./: .gitignore  Assets.md  CMakeLists.txt  CMakeSettings.json  Items.md  MoveBinary.bat  ProjectArchitecture.md  R-Type.md  README.md  RFC-4242.md  SaltyEnfineFeatures.md  blockCreate.sh  callgrind.out.24312  callgrind.out.24577  gmon.out  gui  level.json  newController.sh  newPrefab.sh  testfailed  toto
Assets/Prefabs/: Beam.prefab  BlockSimple.prefab  CanvasPlayerConnect.prefab  EnemyBullet.prefab  ExplosionBasic.prefab  GameManager.prefab  GameManagerClient.prefab  GameManagerServer.prefab  Laser.prefab  LaserSpiral.prefab  Logger.prefab  Mate.prefab  Medusa.prefab  Missile.prefab  MissileHoming.prefab  MissileMedusa.prefab  MissileNeunoeil.prefab  Monster.prefab  MonsterFlying.prefab  MonsterMedusa.prefab  MonsterNeunoeil.prefab  MonsterWalker.prefab  Player.prefab  Pod.prefab  SelectMap.prefab  SelectRoom.prefab  SpiralBonus.prefab
Assets/Scenes/: scene1.scene  scene2.scene  scene2Server.scene  scene3.scene  scene4.scene  scene4Server.scene  scene5.scene  sceneConnection.scene  sceneNULL.scene  sceneRoom.scene
Assets/Sprites/: Background.sprite  GUIBackground.sprite  Laser.sprite  StarfieldFar.sprite  StarfieldNear.sprite  background.sprite  toto.prefab  toto.sprite
Assets/defaults/: anim.json  prefab.json  scene.json  sprite.json
Conception/: Conception.docx  ProtocolManager.mdj  ServerRoom.mdj  architectureClientServerUseCase.mdj  rtypeConception - SAVED.mdj  rtypeConception.mdj
Conception/RFC/: rfc format.docx  rtype-protocol.docx
Conception/diagrammeActivities/: authentificationROOM.mdj  createROOM.mdj  joinROOM.mdj  launchGameROOM.mdj  quitROOM.mdj
R-Type/: CMakeLists.txt  R-Type.sln
R-Type/Client/: Client.vcxproj  Client.vcxproj.filters  main.cpp
R-Type/ClientLauncher/: ClientLauncher.sln
R-Type/ClientRoom/: Assets  ClientRoom.vcxproj  ClientRoom.vcxproj.filters
R-Type/Common/: CMakeLists.txt
R-Type/GUI/: GUI.vcxproj  GUI.vcxproj.filters
R-Type/GameClient/: CMakeLists.txt  GameClient.vcxproj  GameClient.vcxproj.filters  GameManager.cpp  GameManager.hpp  main.cpp
R-Type/GameServer/: CMakeLists.txt  GameServer.vcxproj  GameServer.vcxproj.filters  main.cpp
R-Type/MissileMedusa/: MissileMedusa.vcxproj  MissileMedusa.vcxproj.filters
R-Type/Monster/: Makefile  Monster.cpp  Monster.h  Monster.hpp  Monster.vcxproj  Monster.vcxproj.filters  ReadMe.txt  dllmain.cpp  stdafx.cpp
R-Type/Network/: CMakeLIsts.txt  CMakeLists.txt  Network.vcxproj  Network.vcxproj.filters
R-Type/Parser/: CMakeLists.txt  Parser.sln  Parser.vcxproj  Parser.vcxproj.filters  stdafx.cpp
R-Type/Parser/Parser/: Parser.vcxproj  Parser.vcxproj.filters  ReadMe.txt
R-Type/Player/: Player.vcxproj  Player.vcxproj.filters
R-Type/Prefab/: CMakeLists.txt  Makefile  Monster.exp  Monster.lib  Prefab.vcxproj  Prefab.vcxproj.filters
R-Type/Prefabs/: Makefile
R-Type/Protocol/Game/: CMakeLists.txt
R-Type/Protocol/Room/: CMakeLists.txt
R-Type/Protocol/Server/: CMakeLists.txt
R-Type/R-Type/: R-Type.vcxproj
R-Type/SFML/: Makefile  SFML.vcxproj  SFML.vcxproj.filters
R-Type/SFMLSaltyEngine/: CMakeLists.txt  Makefile
R-Type/SaltyEngine/: CMakeLists.txt  Makefile  SaltyEngine.sln  build.sh  precompile.sh  salty-engine
R-Type/SaltyEngine/API/: Behaviour.md  Component.md  GameObject.md  Object.md  SaltyBehaviour.md  Transform.md
R-Type/SaltyEngine/SaltyEngine/: AA.cpp  AA.hpp  Coroutine.hpp  SaltyBehavior.cpp  SaltyBehavior.hpp  SaltyEngine.vcxproj  SaltyEngine.vcxproj.filters  SaltyEngineSFML.cpp  SaltyGame.cpp  SaltyGame.hpp  SaltyObj.hpp  Scene.cpp  Transform.cpp  Transform.hpp  Vector3.cpp  Vector3.hpp  defaultReflection.inl  main.cpp  resource.h
R-Type/ServerGameDispatcher/: CMakeLists.txt
R-Type/ServerRoom/: CMakeLists.txt
R-Type/SpriteEditor/: SpriteEditor.sln
R-Type/TestDestroy/: CMakeLists.txt  Tests  main.cpp
R-Type/TestParser/: Makefile  TestParser.vcxproj  main.cpp  test_parser
Test/GUI/: main.cpp
Tests/Adrien/: CMakeLists.txt  Makefile  build.sh  main.cpp
Tests/Animations/: CMakeLists.txt  main.cpp
Tests/GUI/: CMakeLists.txt  Makefile  TestCollision.cpp  TestCollision.hpp  main.cpp
Tests/GameServer/: CMakeLists.txt  gameclient-1.cpp  gameserv-1.cpp  gameserv-2.cpp  gameserver-stable.cpp  main.cpp
Tests/Network/: CMakeLists.txt  basetcp.hpp  baseudp.hpp  tcpclient-1.cpp  tcpserv-1.cpp  udpclient-1.cpp  udpreception-status.cpp  udpserv-1.cpp  udpserv-2.cpp
Tests/Network/ClientRoomConnectionToServerRoom/: CMakeLists.txt  basetcp.hpp  tcpclient-1.cpp
Tests/Network/ServerGameConnectionToServerRoom/: serverGameClient.hpp  serverGameTCP.cpp
Tests/Process/: CMakeLists.txt  main.cpp
Tests/Rotation/: main.cpp
Tests/SaltyEngine/: Makefile  main.cpp
include/ClientLauncher/: Laser.hpp  Logger.hpp  LoggerController.hpp  PlayerController.hpp  RtypeFactory.hpp  SelectRoom.hpp  SelectRoomController.hpp
include/Common/: CustomEnum.hpp  DLLexport.hpp  Debug.hpp  Delegate.hpp  DllLoader.hpp  EventDispatcher.hpp  Flags.hpp  ICloneable.hpp  ILibraryLoader.hpp  LibLoader.hpp  MakeUnique.hpp  Singleton.hpp  Utils.hpp  getopt.h  option.h
include/Missile/: MissileController.hpp
include/Monster/: Monster.hpp  MonsterController.hpp
include/Network/: IAcceptor.hpp  IConnectable.hpp  INativeSocketContainer.hpp  INativeSocketStreamHandler.hpp  ISockStream.hpp  NativeSocketIOOperationDispatcher.hpp  NetBuffer.hpp  UnixSocket.hpp  WinSocket.hpp
include/Parser/: AParser.hpp  ConsumerParser.hpp  IParser.hpp  Json.hpp  JsonException.hpp  JsonVariant.hpp  Parser.hpp  ParserConf.hpp  ParserHttp.hpp  ParserJson.hpp  ProducterStream.hpp
include/Player/: Player.hpp
include/Prefabs/: GenericController.hpp  RtypePrefab.hpp
include/Process/: IProcess.hpp  Process.hpp  UnixProcess.hpp  WinProcess.hpp
include/Protocol/: GamePackageFactory.hpp  IProtocolGameHandler.hpp  IRTypeProtocolManager.hpp  (+4 more)
testFILE/: AUTHENTICATEPacket  BEAMPackage  DIEPackage  DIEPackageFAILED  DROPPackage  MOVEPackage  TAKEPackage  launchPackage  roomAUTHENTICATEFILE  statusPackage
(+952 files in other folders)
